--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 #content {
   min-height: 100vh;
 }
