--- a/src/app/components/company/company.component.scss
+++ b/src/app/components/company/company.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .team-right-col:after {
   content: "";
   position: absolute;
@@ -16,7 +19,6 @@
     transparent 51%
   );
 }
-
 .team-right-col {
   box-shadow: 0 -0.125rem 0.25rem rgba(0, 0, 0, 0.075) !important;
 }
