--- a/src/app/components/company/team/team.component.scss
+++ b/src/app/components/company/team/team.component.scss
@@ -1,7 +1,13 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .btn {
   width: fit-content;
 }
 
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .member-col {
     margin: 0 !important;
