--- a/src/app/components/home/home-products/home-products.component.html
+++ b/src/app/components/home/home-products/home-products.component.html
@@ -19,10 +19,6 @@
                   <h5>
                     Simplify, schedule and automate daily life.
                   </h5>
-                  <!--
-                  <img src="/assets/images/Wifiplug Logo - White.png" height="30px"
-                  />
-                  -->
                 </div>
                 <div class="product-presentation">
                   <h5 class="product-title">
@@ -35,7 +31,7 @@
                   </p>
                   <div class="text-center margin-top-5 product-button">
                     <a
-                      type="button"
+                      type="link"
                       class="btn btn-primary font-weight-bold"
                       href="https://wifiplug.co.uk/"
                     >
@@ -60,9 +56,6 @@
                 <h5>
                   Manage your appliances, and extend their lifespan.
                 </h5>
-                <!--
-                <img src="/assets/images/ServicePlug.png" height="20px" />
-                -->
               </div>
               <div class="product-presentation">
                 <h5 class="product-title">
@@ -75,13 +68,13 @@
                   machine's lifespan!
                 </p>
                 <div class="text-center margin-top-5 product-button button-2">
-                  <button
-                    type="button"
+                  <a
+                    type="link"
                     class="btn btn-primary font-weight-bold"
                     routerLink="serviceplug"
                   >
                     Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -96,7 +89,7 @@
                 class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
               >
                 <div class="padding-left-5 ml-2">
-                  <h3>White Labeling</h3>
+                  <h3>White Labelling</h3>
                   <h5>
                     Rebrand our products for your own business.
                   </h5>
@@ -112,13 +105,13 @@
                     machine's lifespan!
                   </p>
                   <div class="text-center margin-top-5 product-button">
-                    <button
-                      type="button"
+                    <a
+                      type="link"
                       class="btn btn-primary font-weight-bold"
                       routerLink="whitelabel"
                     >
                       Details
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -148,13 +141,13 @@
                   machine's lifespan!
                 </p>
                 <div class="text-center margin-top-5 product-button">
-                  <button
-                    type="button"
+                  <a
+                    type="link"
                     class="btn btn-primary font-weight-bold"
                     routerLink="consulting"
                   >
                     Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -180,9 +173,6 @@
                   <h5>
                     Simplify, schedule and automate daily life.
                   </h5>
-                  <!--
-                  <img src="/assets/images/Wifiplug Logo - White.png" height="30px" />
-                  -->
                 </div>
                 <div class="product-presentation">
                   <h5 class="product-title">
@@ -195,7 +185,7 @@
                   </p>
                   <div class="text-center margin-top-5 product-button">
                     <a
-                      type="button"
+                      type="link"
                       class="btn btn-primary font-weight-bold"
                       href="https://wifiplug.co.uk/"
                     >
@@ -220,9 +210,6 @@
                 <h5>
                   Manage your appliances, and extend their lifespan.
                 </h5>
-                <!--
-                <img src="/assets/images/ServicePlug.png" height="20px" />
-                -->
               </div>
               <div class="product-presentation">
                 <h5 class="product-title">
@@ -235,12 +222,9 @@
                   machine's lifespan!
                 </p>
                 <div class="text-center margin-top-5 product-button">
-                  <button
-                    type="button"
-                    class="btn btn-primary font-weight-bold"
-                  >
+                  <a type="link" class="btn btn-primary font-weight-bold">
                     Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
@@ -258,7 +242,7 @@
                 class="height-100 d-flex flex-column justify-content-between padding-top-10 padding-bottom-10 content-div"
               >
                 <div class="padding-left-2">
-                  <h3>White Labeling</h3>
+                  <h3>White Labelling</h3>
                   <h5>
                     Rebrand our products for your own business.
                   </h5>
@@ -274,12 +258,9 @@
                     machine's lifespan!
                   </p>
                   <div class="text-center margin-top-5 product-button">
-                    <button
-                      type="button"
-                      class="btn btn-primary font-weight-bold"
-                    >
+                    <a type="link" class="btn btn-primary font-weight-bold">
                       Details
-                    </button>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -309,12 +290,9 @@
                   machine's lifespan!
                 </p>
                 <div class="text-center margin-top-5 product-button">
-                  <button
-                    type="button"
-                    class="btn btn-primary font-weight-bold"
-                  >
+                  <a type="link" class="btn btn-primary font-weight-bold">
                     Details
-                  </button>
+                  </a>
                 </div>
               </div>
             </div>
