--- a/src/app/components/home/home-worked-with/home-worked-with.component.scss
+++ b/src/app/components/home/home-worked-with/home-worked-with.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .company-logo {
   height: 25px;
 }
