--- a/src/app/components/products/serviceplug/learn-more/learn-more.component.html
+++ b/src/app/components/products/serviceplug/learn-more/learn-more.component.html
@@ -1,4 +1,6 @@
-<article class="container-fluid px-0 background-color-primary padding-bottom-6 padding-top-6">
+<article
+  class="container-fluid px-0 background-color-primary padding-bottom-6 padding-top-6"
+>
   <div
     class="padding-left-2 padding-right-2 padding-bottom-3 d-flex flex-column align-items-center text-color-light"
   >
@@ -9,14 +11,22 @@
   </div>
   <div class="row m-0 text-center padding-left-2 padding-right-2">
     <div class="col margin-bottom-1">
-      <button type="button" class="btn btn-secondary font-weight-bold" routerLink="/serviceplug/manufacturers">
+      <a
+        type="link"
+        class="btn btn-secondary font-weight-bold"
+        routerLink="/serviceplug/manufacturers"
+      >
         I'm a Manufacturer
-      </button>
+      </a>
     </div>
     <div class="col">
-        <button type="button" class="btn btn-secondary font-weight-bold" routerLink="/serviceplug/consumers">
-          I'm a Consumer
-        </button>
-      </div>
+      <a
+        type="link"
+        class="btn btn-secondary font-weight-bold"
+        routerLink="/serviceplug/consumers"
+      >
+        I'm a Consumer
+      </a>
+    </div>
   </div>
 </article>
