--- a/src/app/components/products/serviceplug/learn-more/learn-more.component.scss
+++ b/src/app/components/products/serviceplug/learn-more/learn-more.component.scss
@@ -1,7 +1,13 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .btn {
   width: max-content;
 }
 
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 575.9px) {
   .btn {
     width: 100%;
