--- a/src/assets/css/shared/fonts.scss
+++ b/src/assets/css/shared/fonts.scss
@@ -1,4 +1,7 @@
-// Defines the font used in the whole app
+/*********************************************************************************************
+ * Defines the font used in the whole app
+ *********************************************************************************************/
+
 @font-face {
   font-family: Myma;
   src: url(./fonts/Ubuntu_Regular.ttf);
