--- a/src/assets/css/shared/paddings.scss
+++ b/src/assets/css/shared/paddings.scss
@@ -1,6 +1,6 @@
-/**
- * Defines all padding classes
- */
+/*********************************************************************************************
+ * Defines all padding styles
+ *********************************************************************************************/
 
 // The spacing unit used to define all paddings values
 $spacing: 1rem;
