--- a/src/app/components/company/team/team-member/team-member.component.scss
+++ b/src/app/components/company/team/team-member/team-member.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .member-img {
     border-width: 0;
     border-radius: .75rem !important;
