--- a/src/app/components/company/vacancies/vacancies.component.scss
+++ b/src/app/components/company/vacancies/vacancies.component.scss
@@ -1,9 +1,11 @@
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .vacancies-div {
     padding-left: 2rem !important;
     padding-right: 2rem !important;
   }
-
   .col-sm {
       padding: 0 !important;
   }
