--- a/src/app/components/contact/contact-details/contact-details.component.scss
+++ b/src/app/components/contact/contact-details/contact-details.component.scss
@@ -1,14 +1,19 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .network-image {
   height: 48px;
   border: 0.15rem solid var(--bg-light);
   border-radius: 50px;
 }
-
 .network-link:hover {
   transform: scale(1.1);
   transition: 0.1s;
 }
 
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .details-container {
     padding-left: 0 !important;
