--- a/src/app/components/contact/contact-form/contact-form.component.scss
+++ b/src/app/components/contact/contact-form/contact-form.component.scss
@@ -1,9 +1,11 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .select-wrapper select {
   appearance: none;
   -moz-appearance: none;
   -webkit-appearance: none;
 }
-
 .select-wrapper select {
   background-image: linear-gradient(45deg, transparent 50%, gray 50%),
     linear-gradient(135deg, gray 50%, transparent 50%);
@@ -12,22 +14,22 @@
   background-size: 7px 4px, 7px 4px;
   background-repeat: no-repeat;
 }
-
 .select-wrapper select:focus {
   background-image: linear-gradient(45deg, gray 50%, transparent 50%),
     linear-gradient(135deg, transparent 50%, gray 50%);
   background-position: calc(100% - 15px) calc(1em + 1px),
     calc(100% - 20px) calc(1em + 1px), calc(100% - 2.5em) 0.5em;
 }
-
 .contact-textarea {
   min-height: 200px !important;
 }
-
 .contact-form {
   z-index: 10 !important;
 }
 
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .contact-form-container {
     padding-left: 2rem !important;
