--- a/src/app/components/home/home-banner/home-banner.component.html
+++ b/src/app/components/home/home-banner/home-banner.component.html
@@ -1,4 +1,7 @@
-<div id="home-banner-div" class="img-fluid banner-div shadow-sm background-color-primary">
+<div
+  id="home-banner-div"
+  class="img-fluid banner-div shadow-sm background-color-primary"
+>
   <div
     class="padding-5 banner-text d-flex flex-column justify-content-center align-items-start"
   >
@@ -6,7 +9,8 @@
       We Turn The Key For IoT
     </h1>
     <h4 class="padding-bottom-1 padding-top-1 text-color-light">
-      myma provides both manufacturers and consumers insight into their appliances.
+      myma provides both manufacturers and consumers insight into their
+      appliances.
     </h4>
     <button
       type="button"
