--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,9 +1,15 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
+#products-anchor {
+  transform: translateY(-80px);
+}
+
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (min-width: 992px) {
   #home-content {
     padding-top: calc(100vh - 80px - 0.3rem);
   }
-}
-
-#products-anchor {
-  transform: translateY(-80px);
 }
