--- a/src/app/components/products/serviceplug/manufacturers/manufacturers.component.scss
+++ b/src/app/components/products/serviceplug/manufacturers/manufacturers.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .card-text {
-    text-align: justify;
+  text-align: justify;
 }
