--- a/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.scss
+++ b/src/app/components/products/serviceplug/serviceplug-banner/serviceplug-banner.component.scss
@@ -1,26 +1,14 @@
-@media (max-width: 991.9px) {
-  .banner-text {
-    padding-left: 2rem !important;
-    padding-right: 2rem !important;
-  }
-}
-
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .serviceplug-logo {
   height: 32px;
 }
-
-@media (min-width: 992px) {
-  .banner-div {
-    width: 100vw;
-  }
-}
-
 .banner-div {
   background-image: url(src/assets/images/serviceplug/shutterstock_1208917930.jpg);
   background-size: cover;
   background-position: center;
 }
-
 .banner-text {
   background-image: -webkit-gradient(
     linear,
@@ -34,4 +22,23 @@
     rgba(102, 46, 139, 0.3),
     transparent
   );
+}
+
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
+@media (max-width: 991.9px) {
+  .banner-text {
+    padding-left: 2rem !important;
+    padding-right: 2rem !important;
+  }
+}
+
+/*********************************************************************************************
+ * Large screens styles
+ *********************************************************************************************/
+@media (min-width: 992px) {
+  .banner-div {
+    width: 100vw;
+  }
 }
