--- a/src/app/components/shared/header/nav-button/nav-button.component.scss
+++ b/src/app/components/shared/header/nav-button/nav-button.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * General styles
+ *********************************************************************************************/
 .nav-link {
   padding-left: 2rem !important;
   padding-right: 2rem !important;
@@ -5,21 +8,16 @@
   font-weight: bold;
   transition: 0.2s;
 }
-
 .nav-item:hover .nav-link {
   color: var(--bg-secondary) !important;
 }
-
 .active {
   position: relative;
   color: var(--bg-secondary) !important;
 }
-
 .activeInDropdown {
   color: var(--bg-secondary) !important;
 }
-
-// Large screen version active link
 .active:after {
   content: "";
   position: absolute;
@@ -32,16 +30,15 @@
   border-radius: 0 0 9999px 9999px;
 }
 
-// Small screen version active link
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   .active:after {
     width: 0.3rem;
     height: 100%;
     border-radius: 0 9999px 9999px 0;
   }
-}
-
-@media (max-width: 991.9px) {
   .nav-item {
     line-height: 2rem;
   }
