--- a/src/app/components/shared/header/nav-buttons-container/nav-buttons-container.component.scss
+++ b/src/app/components/shared/header/nav-buttons-container/nav-buttons-container.component.scss
@@ -1,3 +1,6 @@
+/*********************************************************************************************
+ * Small screens styles
+ *********************************************************************************************/
 @media (max-width: 991.9px) {
   ul.navbar-nav {
     overflow-y: scroll !important;
